--- a/src/main/resources/templates/SearchPage.html
+++ b/src/main/resources/templates/SearchPage.html
@@ -25,13 +25,13 @@
 			padding: 20px;
 			background-color: #cbe3b5;
 			/*border: 1px solid #ddd;
-			border-radius: 5px; */
-			box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+			border-radius: 5px; 
+			box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);*/
 		}
 
 		input[type="text"] {
 			display: inline-block;
-			width: 40%;
+			width: 50%;
 			padding: 10px;
 			height: 30%;
 			margin: 5px 0;
@@ -73,6 +73,21 @@
 			border-radius: 10px;
 			background-color: darkblue;
 		}
+
+	
+		thead tr th {
+			height: 40px;
+			line-height: 40px;
+			text-align: center;
+			font-size: 14px;
+			font-weight: 900;
+		}
+
+		td {
+			text-align: center;
+				border: 1px solid black;
+
+		}
 	</style>
 </head>
 
@@ -88,7 +103,7 @@
 	<form method="post" class="form-horizontal" th:action="@{/searchClick(ssoid = ${ssoid})}">
 		<div class="label-container" style="margin-top: 20px;">
 			<label for="stmNumber">STM Number <br>(Quality inspection
-				method_master <br>quality inspection characteristics)
+				method_master quality inspection characteristics)
 			</label> <input type="text" id="stmNumber" name="stmNo" maxlength="15" onkeydown="enterClick(1,event)"
 				pattern="[a-zA-Z0-9]+" title="Enter only Characters and Numbers" />
 		</div>
@@ -122,7 +137,7 @@
 				date)</label>
 			<input type="text" s class="dobField timePeriodFrom1 datepicker-input" placeholder="yyyy/MM/dd"
 				name="startDraftDate" maxlength="10" onkeydown="enterClick(6,event)" id="draft_start_date"
-				title="Please Enter Date in yyyy/MM/dd."
+				style="margin-left: 26%;width: 46%;" title="Please Enter Date in yyyy/MM/dd."
 				pattern="(?:19|20)(?:[0-9]{2}\/(?:(?:0[1-9]|1[0-2])\/(?:0[1-9]|1[0-9]|2[0-8])|(?:(?!02)(?:0[1-9]|1[0-2])-(?:29|30))|(?:(?:0[13578]|1[02])-31))|(?:[13579][26]|[02468][048])\/02\/29)" />
 			~
 			<input type="text" class="dobField timePeriodTo1 datepicker-input" placeholder="yyyy/MM/dd"
@@ -157,10 +172,9 @@
 		<input type="hidden" id="ssoid" name="ssoid" th:value="${ssoid}" />
 		<button type="submit" class="btn btn-primary view">View</button>
 	</form>
-	<div class="table-responsive">
-		<table class="table table-striped table-hover" id="searchTable" title="Confidential information"
-			style=" border: 1px solid black; border-collapse: collapse;">
-			<thead>
+	<div class="scrolldown" style="margin-top: 4%;">
+		<table class="table table-striped table-hover" id="searchTable" title="Confidential information">
+			<thead style="text-align: center;">
 				<tr>
 					<th>No</th>
 					<th>STM_No</th>
@@ -175,25 +189,25 @@
 					<th>Old_STM_Number</th>
 					<th>Note1</th>
 					<th>Note2</th>
-					<th style="width: 20;">Note3</th>
+					<th>Note3</th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr th:each="n:${list}" onclick="">
-					<th th:text="${n.getNo()}"></th>
-					<th th:text="${n.getStmNo()}"></th>
-					<th th:text="${n.getStmVersion()}"></th>
-					<th th:text="${n.getLinkDestination()}"></th>
-					<th th:text="${n.getTextShortJP()}"></th>
-					<th th:text="${n.getTextShortEN()}"></th>
-					<th th:text="${n.getPdfFile()}"></th>
-					<th th:text="${n.getWordFile()}"></th>
-					<th th:text="${n.getDraftingDate()}"></th>
-					<th th:text="${n.getFinalDrafterName()}"></th>
-					<th th:text="${n.getOldSTMNumber()}"></th>
-					<th th:text="${n.getRemarks1()}"></th>
-					<th th:text="${n.getNote2()}"></th>
-					<th th:text="${n.getNote3()}"></th>
+					<td th:text="${n.getNo()}"></td>
+					<td th:text="${n.getStmNo()}"></td>
+					<td style="text-align: right;width: 4%;" th:text="${n.getStmVersion()}"></td>
+					<td style="width: 7%;" th:text="${n.getLinkDestination()}"></td>
+					<td th:text="${n.getTextShortJP()}"></td>
+					<td th:text="${n.getTextShortEN()}"></td>
+					<td th:text="${n.getPdfFile()}"></td>
+					<td th:text="${n.getWordFile()}"></td>
+					<td th:text="${n.getDraftingDate()}"></td>
+					<td th:text="${n.getFinalDrafterName()}"></td>
+					<td th:text="${n.getOldSTMNumber()}"></td>
+					<td th:text="${n.getRemarks1()}"></td>
+					<td th:text="${n.getNote2()}"></td>
+					<td th:text="${n.getNote3()}"></td>
 				</tr>
 			<tbody>
 		</table>
