--- a/src/main/resources/templates/RegistrationPage.html
+++ b/src/main/resources/templates/RegistrationPage.html
@@ -1,94 +1,97 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
-<title>Registration Form</title>
-<link rel="stylesheet" type="text/css" href="CSS/styles.css">
-<style>
-body {
-	font-family: Arial, sans-serif;
-	margin: 0;
-	padding: 0;
-	text-align: center;
-}
+	<title>Registration Form</title>
+	<link rel="stylesheet" type="text/css" href="CSS/styles.css">
+	<style>
+		body {
+			font-family: Arial, sans-serif;
+			margin: 0;
+			padding: 0;
+			text-align: center;
+		}
 
-h1 {
-	padding: 10px 0;
-}
+		h1 {
+			padding: 10px 0;
+		}
 
-form {
-	max-width: 600px;
-	margin: 0 auto;
-	padding: 20px;
-	background-color: #cbe3b5;	
-}
+		form {
+			max-width: 600px;
+			margin: 0 auto;
+			padding: 20px;
+			background-color: #cbe3b5;
+		}
 
-input[type="text"], input[type="file"] {
-	display: inline-block;
-	width: 30%;
-	padding: 10px;
-	margin: 5px 0;
-/* 	border: 1px solid #ccc; */
-	border-radius: 5px;
-}
+		input[type="text"],
+		input[type="file"] {
+			display: inline-block;
+			width: 30%;
+			padding: 10px;
+			margin: 5px 0;
+			/* 	border: 1px solid #ccc; */
+			border-radius: 5px;
+		}
 
-input[type="file"] {
-	width: 50%;
-}
+		input[type="file"] {
+			width: 50%;
+		}
 
-button {
-	display: inline-block;
-	padding: 10px 20px;
-	margin: 10px 5px;
-	background-color: #333;
-	color: #fff;
-	border: none;
-	border-radius: 3px;
-	cursor: pointer;
-}
+		button {
+			display: inline-block;
+			padding: 10px 20px;
+			margin: 10px 5px;
+			background-color: #333;
+			color: #fff;
+			border: none;
+			border-radius: 3px;
+			cursor: pointer;
+		}
 
-button:hover {
-	background-color: #555;
-}
+		button:hover {
+			background-color: #555;
+		}
 
-/* Modal styles */
-.modal {
-	display: none;
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background-color: rgba(0, 0, 0, 0.5);
-}
+		/* Modal styles */
+		.modal {
+			display: none;
+			position: fixed;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			background-color: rgba(0, 0, 0, 0.5);
+		}
 
-.modal-content {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	background-color: #fefefe;
-	padding: 20px;
-	border: 1px solid #888;
-	width: 300px;
-	color: red;
-}
+		.modal-content {
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+			background-color: #fefefe;
+			padding: 20px;
+			border: 1px solid #888;
+			width: 300px;
+			color: red;
+		}
 
-.close {
-	color: #aaa;
-	float: right;
-	font-size: 20px;
-	font-weight: bold;
-	cursor: pointer;
-}
+		.close {
+			color: #aaa;
+			float: right;
+			font-size: 20px;
+			font-weight: bold;
+			cursor: pointer;
+		}
 
-.close:hover {
-	color: black;
-}
-</style>
+		.close:hover {
+			color: black;
+		}
+	</style>
 </head>
+
 <body id="dashboardBody">
 	<input type="hidden" id="ssoid" name="ssoid" th:value="${ssoid}" />
-	<h5 id =adminMessage th:text="'' + ${ssoid}" style="color: #062d73;"></h5>
+	<h5 id=adminMessage th:text="'' + ${ssoid}" style="color: #062d73;"></h5>
 
 	<h1>STM:Silicone Test Method</h1>
 	<!-- <div id="pdfError" class="error-message"></div>
@@ -97,11 +100,11 @@ button:hover {
 	<!-- <p id="message" th:text="${message}"></p>
 	<p id="message" th:text="${error}"></p> -->
 	<div id="successMessageDiv" th:if="${message}">
-    <p style="color: green;" th:text="${message}"></p>
-</div>
-<div id="errorMessageDiv" th:if="${error}">
-    <p style="color: red;" th:text="${error}"></p>
-</div>
+		<p style="color: green;" th:text="${message}"></p>
+	</div>
+	<div id="errorMessageDiv" th:if="${error}">
+		<p style="color: red;" th:text="${error}"></p>
+	</div>
 	<div id="modal" class="modal">
 		<div class="modal-content">
 			<span class="close" onclick="closeModal()">&times;</span>
@@ -109,14 +112,13 @@ button:hover {
 		</div>
 	</div>
 
-	<form th:action="@{/register(ssoid = ${ssoid})}" th:object="${STM}" method="post"
-		enctype="multipart/form-data">
+	<form th:action="@{/register(ssoid = ${ssoid})}" th:object="${STM}" method="post" enctype="multipart/form-data">
 		<div class="label-container">
 			<label for="stmNumber">STM Number<br>(Quality inspection
 				method_master <br>quality inspection characteristics)
-			</label> <input type="text" id="stmNumber" th:field="*{stmNo}"
-				style="height: 15px;" maxlength="15"
-				oninput="updateDisabledField(this),updateFields()" required pattern="[a-zA-Z0-9]*" title="Alphabet and Number characters only allowed">
+			</label> <input type="text" id="stmNumber" th:field="*{stmNo}" style="height: 15px;" maxlength="15"
+				oninput="updateDisabledField(this),updateFields()" required pattern="[a-zA-Z0-9]*"
+				title="Alphabet and Number characters only allowed">
 		</div>
 		<input type="text" id="disabledField" th:field="*{stmVersion}" disabled="disabled"
 			style="height: 15px; margin-left: 280px;">
@@ -126,36 +128,40 @@ button:hover {
 
 		<div class="label-container">
 			<label for="linkDestination">Link Destination(STM_parent
-				number)</label> <input type="text" id="linkDestination"
-				th:field="*{linkDestination}" disabled="disabled">
+				number)</label> <input type="text" id="linkDestination" th:field="*{linkDestination}"
+				disabled="disabled">
 		</div>
 
 		<div class="label-container">
-			<label for="textJapanese">Text (Short) Japanese</label> <input
-				type="text" id="textJapanese" th:field="*{textShortJP}" maxlength="200" 
-				pattern="^[a-zA-Z\u3040-\u30FF\u31F0-\u31FF\u4E00-\u9FAF\u3400-\u4DBF\s]+$" title="Alphabet and japanese characters only allowed" >
+			<label for="textJapanese">Text (Short) Japanese</label> <input type="text" id="textJapanese"
+				th:field="*{textShortJP}" maxlength="200"
+				pattern="^[a-zA-Z\u3040-\u30FF\u31F0-\u31FF\u4E00-\u9FAF\u3400-\u4DBF\s]+$"
+				title="Alphabet and japanese characters only allowed">
 		</div>
 
 		<div class="label-container">
-			<label for="textEnglish">Text (Short) English</label> <input
-				type="text" id="textEnglish" th:field="*{textShortEN}" maxlength="200" pattern="^[a-zA-Z\s]+$" title="Alphabet and Space only allowed">
+			<label for="textEnglish">Text (Short) English</label> <input type="text" id="textEnglish"
+				th:field="*{textShortEN}" maxlength="200" pattern="^[a-zA-Z\s]+$"
+				title="Alphabet and Space only allowed">
 		</div>
 
 		<div class="label-container">
 			<label for="attachmentPdf">Attachment (PDF)</label>
 			<div class="file-input">
-				<input type="text" id="attachedPdf" disabled="disabled" pattern="^[a-zA-Z0-9().\-\s]+$" title="Alphabet,number,dot,hypen and Space only allowed"> <input
-					type="file" id="attachmentPdf" name="pdfFile" maxlength="25"
-					onchange="updatePdfFileName('attachedPdf', 'attachmentPdf', 'pdfError')" >
+				<input type="text" id="attachedPdf" disabled="disabled" pattern="^[a-zA-Z0-9().\-\s]+$"
+					title="Alphabet,number,dot,hypen and Space only allowed"> <input type="file" id="attachmentPdf"
+					name="pdfFile" maxlength="25"
+					onchange="updatePdfFileName('attachedPdf', 'attachmentPdf', 'pdfError')">
 			</div>
 		</div>
 
 		<div class="label-container">
 			<label for="attachmentWord">Attachment (Word)</label>
 			<div class="file-input">
-				<input type="text" id="attachedWord" disabled="disabled" pattern="^[a-zA-Z0-9().\-\s]+$" title="Alphabet,number,dot,hypen and Space only allowed"> <input
-					type="file" id="attachmentWord" name= "wordFile" maxlength="25"
-					onchange="updateWordFileName('attachedWord', 'attachmentWord', 'wordError')" >
+				<input type="text" id="attachedWord" disabled="disabled" pattern="^[a-zA-Z0-9().\-\s]+$"
+					title="Alphabet,number,dot,hypen and Space only allowed"> <input type="file" id="attachmentWord"
+					name="wordFile" maxlength="25"
+					onchange="updateWordFileName('attachedWord', 'attachmentWord', 'wordError')">
 			</div>
 		</div>
 		<!-- Modal for PDF error -->
@@ -174,47 +180,50 @@ button:hover {
 			</div>
 		</div>
 
+		<!-- ADDED[S] Samata added date format -->
 		<div class="label-container">
-			<label for="lastUpdated">Last Updated (Drafting Date)</label> <input
-				type="text" id="lastUpdated" th:field="*{draftingDate}"
-				placeholder="yyyy/mm/dd" onblur="validateDateFormat(this)" maxlength="10" required="required">
+			<label for="lastUpdated">Last Updated (Drafting Date)</label> <input type="text" id="lastUpdated"
+				th:field="*{draftingDate}" placeholder="yyyy/mm/dd" maxlength="10" required="required"
+				title="Please Enter Date in yyyy/MM/dd."
+				pattern="(?:19|20)(?:[0-9]{2}\/(?:(?:0[1-9]|1[0-2])\/(?:0[1-9]|1[0-9]|2[0-8])|(?:(?!02)(?:0[1-9]|1[0-2])-(?:29|30))|(?:(?:0[13578]|1[02])-31))|(?:[13579][26]|[02468][048])\/02\/29)">
+		</div>
+		<!-- ADDED[E]Samata_2023/12/22 -->
+
+		<div class="label-container">
+			<label for="finalDrafter">Final Drafter (Last Name)</label> <input type="text" id="finalDrafter"
+				th:field="*{finalDrafterName}" maxlength="50" required pattern="^[a-zA-Z\s]+$"
+				title="Alphabet and Space only allowed">
 		</div>
 
 		<div class="label-container">
-			<label for="finalDrafter">Final Drafter (Last Name)</label> <input
-				type="text" id="finalDrafter" th:field="*{finalDrafterName}" maxlength="50" required pattern="^[a-zA-Z\s]+$" title="Alphabet and Space only allowed" >
+			<label for="oldStmNumber">Old STM Number</label> <input type="text" id="oldStmNumber"
+				th:field="*{oldSTMNumber}" disabled="disabled" maxlength="15">
 		</div>
 
 		<div class="label-container">
-			<label for="oldStmNumber">Old STM Number</label> <input type="text"
-				id="oldStmNumber" th:field="*{oldSTMNumber}" disabled="disabled" maxlength="15">
+			<label for="remarks1">Remarks 1</label> <input id="remarks1" maxlength="200" type="text"
+				th:field="*{remarks1}">
 		</div>
 
 		<div class="label-container">
-			<label for="remarks1">Remarks 1</label> <input id="remarks1" maxlength="200"
-				type="text" th:field="*{remarks1}">
+			<label for="note2">Note 2</label> <input type="text" id="note2" maxlength="200" th:field="*{note2}">
 		</div>
 
 		<div class="label-container">
-			<label for="note2">Note 2</label> <input type="text" id="note2" maxlength="200"
-				th:field="*{note2}">
-		</div>
-
-		<div class="label-container">
-			<label for="note3">Note 3</label> <input type="text" id="note3" maxlength="200"
-				th:field="*{note3}">
+			<label for="note3">Note 3</label> <input type="text" id="note3" maxlength="200" th:field="*{note3}">
 		</div>
 
 		<div style="margin-top: 20px;">
-			<button type="submit" name="action" value="register"
-				class="registerclose">Register</button>
-		<button type="button" name="action" value="return" class="returnClear" th:onclick="|window.location.href='@{/returnAdminDashboard(ssoid = ${ssoid})}'|">Return</button>
+			<button type="submit" name="action" value="register" class="registerclose">Register</button>
+			<button type="button" name="action" value="return" class="returnClear"
+				th:onclick="|window.location.href='@{/returnAdminDashboard(ssoid = ${ssoid})}'|">Return</button>
 			<button type="reset" name="action" value="clear" class="returnClear">Clear</button>
-			<button type="button" name="action" value="close"
-				class="registerclose" onclick="window.close();">Close</button>
+			<button type="button" name="action" value="close" class="registerclose"
+				onclick="window.close();">Close</button>
 		</div>
 	</form>
-	 <script th:src="@{/js/register.js}"></script>
+	<script th:src="@{/js/register.js}"></script>
 
 </body>
+
 </html>
