--- a/src/main/resources/templates/SearchPage.html
+++ b/src/main/resources/templates/SearchPage.html
@@ -135,14 +135,15 @@
 		<div class="label-container">
 			<label for="last updated(Drafting date)">last updated(Drafting
 				date)</label>
+			<p style="margin-left: 27%;height: 30%;">
 			<input type="text" s class="dobField timePeriodFrom1 datepicker-input" placeholder="yyyy/MM/dd"
 				name="startDraftDate" maxlength="10" onkeydown="enterClick(6,event)" id="draft_start_date"
-				style="margin-left: 26%;width: 46%;" title="Please Enter Date in yyyy/MM/dd."
+				style="margin-left: -20%;width: 54%;" title="Please Enter Date in yyyy/MM/dd."
 				pattern="(?:19|20)(?:[0-9]{2}\/(?:(?:0[1-9]|1[0-2])\/(?:0[1-9]|1[0-9]|2[0-8])|(?:(?!02)(?:0[1-9]|1[0-2])-(?:29|30))|(?:(?:0[13578]|1[02])-31))|(?:[13579][26]|[02468][048])\/02\/29)" />
 			~
 			<input type="text" class="dobField timePeriodTo1 datepicker-input" placeholder="yyyy/MM/dd"
 				style="margin-left: 2%;" name="endDraftDate" maxlength="10" onkeydown="enterClick(7,event)"
-				id="draft_end_date" title="Please Enter Date in yyyy/MM/dd."
+				id="draft_end_date" title="Please Enter Date in yyyy/MM/dd." style="margin-left: 2%; width: 54%;"
 				pattern="(?:19|20)(?:[0-9]{2}\/(?:(?:0[1-9]|1[0-2])\/(?:0[1-9]|1[0-9]|2[0-8])|(?:(?!02)(?:0[1-9]|1[0-2])-(?:29|30))|(?:(?:0[13578]|1[02])-31))|(?:[13579][26]|[02468][048])\/02\/29)" />
 		</div>
 
