--- a/src/main/resources/templates/ReviseScreen.html
+++ b/src/main/resources/templates/ReviseScreen.html
@@ -17,7 +17,7 @@ h1 {
 }
 
 form {
-	max-width: 600px;
+	max-width: 700px;
 	margin: 0 auto;
 	padding: 20px;
 	background-color: #cbe3b5;	
@@ -25,15 +25,18 @@ form {
 
 input[type="text"] {
 	display: inline-block;
-	width: 30%;
-	padding: 10px;
-	margin: 5px 0;
-	border: 2px solid rgb(0, 0, 0);
-	border-radius: 5px;
+        width: 30%;
+        padding:10px;
+        margin: 5px 0;
+        border: 2px solid rgb(0, 0, 0);
+        border-radius: 5px;
 }
 
 input[type="file"] {
-	width: 55%;
+	width: 55%;	        
+        padding: 10px;
+        margin: 5px 0;
+        
 }
 
 button {
@@ -92,7 +95,8 @@ button:hover {
 	color: #fff;
 	text-align: center;
 	border: 3px solid rgb(64, 0, 0);
-	border-radius: 10px;
+	border-radius:10px;
+	margin-right:200px;
 }
 
 .returnClear {
@@ -102,18 +106,21 @@ button:hover {
 	text-align: center;
 	border: 3px solid rgb(64, 0, 0);
 	border-radius: 10px;
+	margin-right:200px;
 } 
 
 .label-container {
-	display: flex;
-	width: 100%;
-}
+        display: flex;
+        justify-content: flex-start;
+        width: 100%;
+        margin-bottom: 10px; 
+    }
 
-.label-container label {
-	width: 50%;
-	text-align: left;
-	margin: 10px 20px;
-}
+    .label-container label {
+        width: 45%; 
+        text-align:left;
+        margin-top: 5px;
+    }
 
 #adminMessage {
     position: absolute;
@@ -123,6 +130,13 @@ button:hover {
     font-size: 18px;
     font-weight: bold;
 }
+
+.stmNumber {
+    height: 15px;
+    background-color:#4d4d4d;
+    color: #fff;
+}
+
 </style>
 </head>
 <body> 
@@ -148,17 +162,17 @@ button:hover {
     <form th:action="@{/revise(ssoid = ${ssoid})}" th:object="${stm}" enctype="multipart/form-data" method="post">            
         <div class="label-container">
             <label for="stmNumber">STM Number<br>(Quality inspection method_master <br>quality inspection characteristics)</label>
-            <input type="text" id="stmNumber" name="" th:field="*{stmNo}" th:value="${stmNo}" style="height: 15px;" readonly="readonly" maxlength="15" />
+            <input type="text" class="stmNumber" id="stmNumber" name="" th:field="*{stmNo}" th:value="${stmNo}" style="height: 15px;" readonly="readonly" maxlength="15" />
         </div>
 
         <div class="label-container">
             <label for="revisionNumber">Revision Number</label>
-            <input type="text" style="height: 15px;" id="revisionNumber"  th:field="*{stmVersion}" th:value="${stmVersion}" readonly="readonly" maxlength="4"/>
+            <input type="text" class="stmNumber" style="height: 15px;" id="revisionNumber"  th:field="*{stmVersion}" th:value="${stmVersion}" readonly="readonly" maxlength="4"/>
         </div>
 
         <div class="label-container">
             <label for="linkDestination">Link Destination(STM_parent number)</label>
-            <input type="text" id="linkDestination" th:field="*{linkDestination}" th:value="${linkDestination}" maxlength="15" pattern="^[a-zA-Z0-9_]+$" 
+            <input type="text" id="linkDestination"  th:field="*{linkDestination}" th:value="${linkDestination}" maxlength="15" pattern="^[a-zA-Z0-9_]+$" 
        title="Alphabet, number, and underscore only allowed"/>
         </div>
 
@@ -176,7 +190,7 @@ button:hover {
         <div class="label-container">
             <label for="attachmentPdf">Attachment (PDF)</label>
             <div class="file-input">
-                <input type="text" id="attachedPdf"  th:field="*{pdfFile}" th:value="${pdfFile}" maxlength="25" pattern="^[a-zA-Z0-9().\-\s]+$" title="Alphabet,number,dot,hypen and Space only allowed" readonly/>
+                <input type="text" id="attachedPdf" style="width:110px; text-align:left;" th:field="*{pdfFile}" th:value="${pdfFile}" maxlength="25" pattern="^[a-zA-Z0-9().\-\s]+$" title="Alphabet,number,dot,hypen and Space only allowed" readonly/>
                 <input type="file" id="attachmentPdf"  name="pdfFile" onchange="updatePdfFileName('attachedPdf', 'attachmentPdf', 'pdfError')" maxlength="25"/>
             </div>
         </div>
@@ -184,7 +198,7 @@ button:hover {
         <div class="label-container">
             <label for="attachmentWord">Attachment (Word)</label>
             <div class="file-input">
-                <input type="text" id="attachedWord" th:field="*{wordFile}" th:value="${wordFile}" maxlength="25" pattern="^[a-zA-Z0-9().\-\s]+$" title="Alphabet,number,dot,hypen and Space only allowed" readonly/>
+                <input type="text" id="attachedWord" style="width:110px;" th:field="*{wordFile}" th:value="${wordFile}" maxlength="25" pattern="^[a-zA-Z0-9().\-\s]+$" title="Alphabet,number,dot,hypen and Space only allowed" readonly/>
                 <input type="file" id="attachmentWord"  name="wordFile" onchange="updateWordFileName('attachedWord', 'attachmentWord', 'wordError')" maxlength="25"/>
             </div>
         </div>
@@ -250,5 +264,8 @@ button:hover {
         </div>
     </form>  
     <script th:src="@{/js/Revise.js}"></script>	
+
+
+    
 </body>
 </html>
