--- a/src/main/resources/templates/LoginScreen.html
+++ b/src/main/resources/templates/LoginScreen.html
@@ -4,63 +4,96 @@
     <meta charset="ISO-8859-1">
     <title>Login</title>
     <link rel="stylesheet" type="text/css" th:href="@{CSS/styles.css}">
-    <style >
-    h1 {
-    margin-top: 20px;
-    font-size: 80px;
-    font-weight: 700;
-}
+    <style>
+        h1 {
+            margin-top: 20px;
+            font-size: 80px;
+            font-weight: 700;
+            text-align: center;
+            margin-right: 20px;
+            margin-left: auto; 
+        }
 
-.error {
-    color: red;
-    font-weight: bold;
-}
+        .error {
+            color: red;
+            font-weight: bold;
+            text-align: center;
+        }
 
-label {
-    font-size: 40px;
-}
+        form {
+            width: 50%;
+            margin: 0 auto;
+            text-align: left;
+        }
 
-input[type="text"]{
-	margin-left: 80px;
-	height: 30px; 
-	
-}
-input[type="password"] {
-    margin-left: 50px;
-    height: 30px;
-}
+        .form-group {
+            display: flex;
+            flex-direction: row; 
+            align-items: center; 
+            margin-bottom: 20px; 
+        }
 
-input[type="submit"] {
-    background-color: darkblue;
-    color: white;
-    font-size: 30px;
-}
-</style>
+        label {
+            font-size: 40px;
+            margin-top: 10px;
+            margin-bottom: 10px; 
+            margin-right: 40px; 
+        }
+        input[type="text"]{
+            width: 30%; 
+            height: 40px;
+            box-sizing: border-box;
+            margin-bottom: 20px;
+             margin-left: 10px;
+        }
+
+        
+        input[type="password"] {
+            width: 30%; 
+            height: 40px;
+            box-sizing: border-box;
+            margin-bottom: 20px; 
+            margin-left: -18px;
+        }
+        
+
+        input[type="submit"] {
+            background-color: darkblue;
+            
+            color: white;
+            font-size: 30px;
+            width: auto;
+        }
+
+        .button-container {
+            text-align: center;
+            margin-left: -40px;
+        }
+    </style>
 </head>
-<body id ="loginscreenbody">
-    <h1 style="text-align: center;">STM:Silicone Test Method</h1>
+<body id="loginscreenbody">
+    <h1>STM: Silicone Test Method</h1>
     <form th:action="@{/login}" th:object="${loginScreen}" method="post">
         <p th:if="${invalidCredentials}" class="error" id="errorMessage">ID or password mismatch</p>
-        <div style="margin-left: 150px;">
+        <div class="form-group">
             <label for="ssoid">SSO ID</label>
-            <input type="text" id="ssoid" name="ssoid" autofocus="autofocus" pattern="[a-zA-Z0-9]*" title="Alphanumeric characters only, up to 11 characters allowed"   maxlength="11" required>
+            <input type="text" id="ssoid" name="ssoid" autofocus="autofocus" pattern="[a-zA-Z0-9]*" title="Alphanumeric characters only, up to 11 characters allowed" maxlength="11" required>
         </div>
-        <div style="margin-left: 150px; margin-top: 60px;">
+        <div class="form-group">
             <label for="password">Password</label>
-            <input type="password" id="password" name="password"  pattern="[a-zA-Z0-9]*" title="Alphanumeric characters only, up to 11 characters allowed"  maxlength="11" required>
+            <input type="password" id="password" name="password" pattern="[a-zA-Z0-9]*" title="Alphanumeric characters only, up to 11 characters allowed" maxlength="11" required>
         </div>
-        <div style="margin-top: 250px; margin-left: 150px;">
+        <div class="button-container">
             <input type="submit" value="Log In">
-            <input type="submit" value="End" style="float: right; margin-right: 100px;">
         </div>
     </form>
+    <script th:inline="javascript">
+        setTimeout(function() {
+            var errorMessage = document.getElementById('errorMessage');
+            if (errorMessage) {
+                errorMessage.style.display = 'none';
+            }
+        }, 2000);
+    </script>
 </body>
-<script th:inline="javascript">
-    setTimeout(function() {
-        var errorMessage = document.getElementById('errorMessage');
-        if (errorMessage) {
-            errorMessage.style.display = 'none';
-        }
-    }, 2000);
-</script>
 </html>
