--- a/src/main/resources/templates/RegistrationPage.html
+++ b/src/main/resources/templates/RegistrationPage.html
@@ -34,7 +34,7 @@
 		}
 
 		input[type="file"] {
-			width: 50%;
+			width: 55%;
 		}
 
 		button {
@@ -121,10 +121,7 @@
 				title="Alphabet and Number characters only allowed">
 		</div>
 		<input type="text" id="disabledField" th:field="*{stmVersion}" disabled="disabled"
-			style="height: 15px; margin-left: 280px;">
-
-		<!-- <div class="label-container"><label for="inspectionCharacteristics">Quality Inspection Characteristics</label>
-        <input type="text" id="inspectionCharacteristics" name="inspectionCharacteristics" ></div> -->
+			style="height: 15px; width: 40px; margin-left: 250px;"> Automatic (00)
 
 		<div class="label-container">
 			<label for="linkDestination">Link Destination(STM_parent
@@ -180,14 +177,13 @@
 			</div>
 		</div>
 
-		<!-- ADDED[S] Samata added date format -->
+		
 		<div class="label-container">
 			<label for="lastUpdated">Last Updated (Drafting Date)</label> <input type="text" id="lastUpdated"
 				th:field="*{draftingDate}" placeholder="yyyy/mm/dd" maxlength="10" required="required"
-				title="Please Enter Date in yyyy/MM/dd."
-				pattern="(?:19|20)(?:[0-9]{2}\/(?:(?:0[1-9]|1[0-2])\/(?:0[1-9]|1[0-9]|2[0-8])|(?:(?!02)(?:0[1-9]|1[0-2])-(?:29|30))|(?:(?:0[13578]|1[02])-31))|(?:[13579][26]|[02468][048])\/02\/29)">
+				pattern="(?:19|20)(?:[0-9]{2}\/(?:0[1-9]|1[0-2])\/(?:0[1-9]|[12][0-9]|3[01]))"
+				title="Please Enter Date in yyyy/mm/dd." oninput="formatInputDate(this)">
 		</div>
-		<!-- ADDED[E]Samata_2023/12/22 -->
 
 		<div class="label-container">
 			<label for="finalDrafter">Final Drafter (Last Name)</label> <input type="text" id="finalDrafter"
@@ -218,8 +214,6 @@
 			<button type="button" name="action" value="return" class="returnClear"
 				th:onclick="|window.location.href='@{/returnAdminDashboard(ssoid = ${ssoid})}'|">Return</button>
 			<button type="reset" name="action" value="clear" class="returnClear">Clear</button>
-			<button type="button" name="action" value="close" class="registerclose"
-				onclick="window.close();">Close</button>
 		</div>
 	</form>
 	<script th:src="@{/js/register.js}"></script>
