--- a/src/main/resources/templates/SearchPage.html
+++ b/src/main/resources/templates/SearchPage.html
@@ -10,6 +10,11 @@
 	<link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
 	<script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
 	<script src="js/search.js"></script>
+	<script th:inline="javascript">
+		/*<![CDATA[*/
+		var contextPath = /*[[${#httpServletRequest.contextPath}]]*/ '/';
+    /*]]>*/
+	</script>
 	<style>
 		body {
 			font-family: Arial, sans-serif;
@@ -24,9 +29,6 @@
 			margin: 0 auto;
 			padding: 20px;
 			background-color: #cbe3b5;
-			/*border: 1px solid #ddd;
-			border-radius: 5px; 
-			box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);*/
 		}
 
 		input[type="text"] {
@@ -74,7 +76,7 @@
 			background-color: darkblue;
 		}
 
-	
+
 		thead tr th {
 			height: 40px;
 			line-height: 40px;
@@ -85,13 +87,30 @@
 
 		td {
 			text-align: center;
-				border: 1px solid black;
+			border: 1px solid black;
 
 		}
+
+		#table1 {
+			height: 400px;
+			width: 1600px;
+			overflow-y: scroll;
+		}
+
+		tr.tableHover:hover {
+			background-color: darkgrey;
+		}
+
+		tr.tableHover {
+		/*	background-color: cornsilk; */
+		background-color: white;
+		}
+	</style>
+
 	</style>
 </head>
 
-<body style="background-color: #C2D6A1;" th:onload="onLoadcall([[${STM}]])">
+<body th:onload="onLoadcall([[${STM}]])">
 	<!-- ADDED[S] AMULYA To Display the ssoid-->
 	<input type="hidden" id="ssoid" name="ssoid" th:value="${ssoid}" />
 	<h5 id=adminMessage th:text="'' + ${ssoid}" style="color: #062d73;"></h5>
@@ -105,13 +124,13 @@
 			<label for="stmNumber">STM Number <br>(Quality inspection
 				method_master quality inspection characteristics)
 			</label> <input type="text" id="stmNumber" name="stmNo" maxlength="15" onkeydown="enterClick(1,event)"
-				pattern="[a-zA-Z0-9]+" title="Enter only Characters and Numbers" />
+				pattern="[a-zA-Z0-9]+" title="Enter only Characters and Numbers" style="margin-top: 3%;" />
 		</div>
 
 		<div class="label-container">
 			<label for="revisionNumber">Revision Number</label>
 			<input type="text" id="Revision number" minlength="1" maxlength="4" name="stmVersion" pattern="[0-9]*"
-				title="Enter only Numbers." onkeydown="enterClick(2,event)" />
+				title="Enter only Numbers." onkeydown="enterClick(2,event)" style="width: 15%;margin-right: 32%;" />
 		</div>
 
 		<div class="label-container">
@@ -123,7 +142,8 @@
 		<div class="label-container">
 			<label for="textJapanese">Text (Short) Japanese</label>
 			<input type="text" id="Japanese" name="textShortJP" maxlength="200" onkeydown="enterClick(4,event)"
-				pattern="[a-zA-Z]*" title="Enter only Characters" />
+				pattern="^[a-zA-Z\u3040-\u30FF\u31F0-\u31FF\u4E00-\u9FAF\u3400-\u4DBF\s]+$"
+				title="Alphabet and japanese characters only allowed" />
 		</div>
 
 		<div class="label-container">
@@ -136,21 +156,22 @@
 			<label for="last updated(Drafting date)">last updated(Drafting
 				date)</label>
 			<p style="margin-left: 27%;height: 30%;">
-			<input type="text" s class="dobField timePeriodFrom1 datepicker-input" placeholder="yyyy/MM/dd"
-				name="startDraftDate" maxlength="10" onkeydown="enterClick(6,event)" id="draft_start_date"
-				style="margin-left: -20%;width: 54%;" title="Please Enter Date in yyyy/MM/dd."
-				pattern="(?:19|20)(?:[0-9]{2}\/(?:(?:0[1-9]|1[0-2])\/(?:0[1-9]|1[0-9]|2[0-8])|(?:(?!02)(?:0[1-9]|1[0-2])-(?:29|30))|(?:(?:0[13578]|1[02])-31))|(?:[13579][26]|[02468][048])\/02\/29)" />
-			~
-			<input type="text" class="dobField timePeriodTo1 datepicker-input" placeholder="yyyy/MM/dd"
-				style="margin-left: 2%;width: 54%;" name="endDraftDate" maxlength="10" onkeydown="enterClick(7,event)"
-				id="draft_end_date" title="Please Enter Date in yyyy/MM/dd."
-				pattern="(?:19|20)(?:[0-9]{2}\/(?:(?:0[1-9]|1[0-2])\/(?:0[1-9]|1[0-9]|2[0-8])|(?:(?!02)(?:0[1-9]|1[0-2])-(?:29|30))|(?:(?:0[13578]|1[02])-31))|(?:[13579][26]|[02468][048])\/02\/29)" />
+				<input type="text" s class="dobField timePeriodFrom1 datepicker-input" placeholder="yyyy/MM/dd"
+					name="startDraftDate" maxlength="10" onkeydown="enterClick(6,event)" id="draft_start_date"
+					style="margin-left: -20%;width: 54%;" title="Please Enter Date in yyyy/MM/dd."
+					pattern="(19|20)\d{2}(\/)(0[1-9]|1[1,2])(\/)(0[1-9]|[12][0-9]|3[01])" />
+				~
+				<input type="text" class="dobField timePeriodTo1 datepicker-input" placeholder="yyyy/MM/dd"
+					style="margin-left: 2%;width: 54%;" name="endDraftDate" maxlength="10"
+					onkeydown="enterClick(7,event)" id="draft_end_date" title="Please Enter Date in yyyy/MM/dd."
+					pattern="(19|20)\d{2}(\/)(0[1-9]|1[1,2])(\/)(0[1-9]|[12][0-9]|3[01])" />
 		</div>
 
 		<div class="label-container">
 			<label for="finalDrafter">Final Drafter (Last Name)</label>
-			<input type="text" id="finalDrafterName" name="finalDrafterName" max="100" title="Enter only characters"
-				pattern="[a-zA-Z]*" onkeydown="enterClick(8,event)" />
+			<input type="text" id="finalDrafterName" name="finalDrafterName" max="100"
+				title="Enter only character and one space." pattern="[a-zA-Z]+[ ][a-zA-Z]+"
+				onkeydown="enterClick(8,event)" />
 		</div>
 
 		<div class="label-container">
@@ -169,12 +190,14 @@
 				th:onclick="|window.location.href='@{/dashboard(ssoid=${ssoid})}'|">Menu</button>
 		</div>
 	</form>
-	<form action="/viewClick" method="post">
+	<form th:action="@{/viewClick}" method="post">
 		<input type="hidden" id="ssoid" name="ssoid" th:value="${ssoid}" />
 		<button type="submit" class="btn btn-primary view">View</button>
 	</form>
-	<div class="scrolldown" style="margin-top: 4%;">
-		<table class="table table-striped table-hover" id="searchTable" title="Confidential information">
+	<!--	<div id="vis"  id="table1">
+-->
+	<div class="table-responsive" style="margin-top: 1%;margin-right: 1%;">
+		<table class="table" id="searchTable" title="Confidential information">
 			<thead style="text-align: center;">
 				<tr>
 					<th>No</th>
@@ -194,7 +217,7 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr th:each="n:${list}" onclick="">
+				<tr th:each="n:${list}" onclick="" class="tableHover">
 					<td th:text="${n.getNo()}"></td>
 					<td th:text="${n.getStmNo()}"></td>
 					<td style="text-align: right;width: 4%;" th:text="${n.getStmVersion()}"></td>
@@ -212,6 +235,7 @@
 				</tr>
 			<tbody>
 		</table>
+	</div>
 	</div>
 	</div>
 	</div>
